# data-detective

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  sample.csv
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  tests.yml
backend/: requirements-dev.txt
backend/app/: main.py  quick_scan.py
backend/tests/: test_api.py
docs/: advanced-usage.md  api-reference.md  cli-reference.md  detectors.md
examples/: sample_data.csv  sample_report.html  sample_report.md
frontend/: app.js  index.html  styles.css
scripts/: gen_coverage_badge.py  generate_benchmark_data.py
src/data_detective/: cli.py  exceptions.py  html_report.py  loader.py  markdown_report.py  profiler.py  report.py
tests/: test_cli.py  test_html_report.py  test_loader.py  test_markdown_report.py  test_profiler.py
tools/fastscan/: go.mod  main.go  main_test.go
