[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-detective-toolkit"
version = "0.3.1"
description = "Automated data-quality profiling: CLI, web app, and REST API for CSV intelligence reports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["data-quality", "profiling", "csv", "data-profiling", "eda", "outlier-detection"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Utilities",
]
dependencies = [
	# Upper bounds are intentional: CI has verified compatibility up to
	# pandas 3.x (Python 3.11/3.12 already resolve to it), but the next
	# major bump should be a deliberate version-bump PR, not a silent
	# `pip install` picking up unverified breaking changes.
	"pandas>=2.0,<4.0",
	"numpy>=1.24,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.10", "pytest-cov>=5.0"]
api = [
	"fastapi>=0.110",
	"uvicorn[standard]>=0.29",
	"python-multipart>=0.0.9",
]

[tool.mypy]
# No explicit python_version pin: the typecheck CI job runs on 3.12 (the
# same version lint/backend-tests use), and mypy has since dropped support
# for targeting 3.9 as a check version even though the package still
# supports running on 3.9. Let mypy infer the version from the interpreter
# actually running it instead of hardcoding a now-invalid target.
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# No type stubs published for pandas/numpy in the pinned version range;
# adopting pandas-stubs is a separate, deliberate effort (it's strict
# enough to need real tuning against this codebase, not a drive-by add).
module = ["pandas.*", "numpy.*"]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
data_detective = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_detective*"]

[project.scripts]
data-detective = "data_detective.cli:main"

[project.urls]
Homepage = "https://github.com/murs5l/data-detective"
Issues = "https://github.com/murs5l/data-detective/issues"
